# pod

./: README.md  pyproject.toml
pod/: cli.py
pod/data/: coordination
pod/data/claude-config/: CLAUDE.md
pod/data/claude-config/commands/: feature.md  meditate.md  plan.md  reflect.md  review.md  summarize.md  work.md
pod/data/claude-config/skills/acquiring-skills/: SKILL.md
pod/data/claude-config/skills/agent-worker-flow/: SKILL.md
pod/data/claude-config/skills/second-opinion/: SKILL.md  codex-opinion
