[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-pod"
dynamic = ["version"]
description = "Multi-agent manager for Claude Code"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Kim Morrison", email = "kim@tqft.net"}]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pod = "pod.cli:main"

[tool.setuptools.dynamic]
version = {attr = "pod.__version__"}

[tool.setuptools.packages.find]
include = ["pod*"]

[tool.setuptools.package-data]
pod = ["data/**/*"]
